<resources>
    <string name="app_name">Proyecto3</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us"> Contact Us</string>
    <string name="direction">Direccion </string>
    <string name="zone">Cumbres de curumo </string>
    <string name="hintName">Nombre</string>
    <string name="hintLastName">Apellido</string>
    <string name="hintEmail">Email</string>
    <string name="hintPasword">Password</string>
    <string name="dntAccount">No tienes cuenta? Registrate!</string>
    <string name="signUpbtn">Registrar</string>
    <string name="titleSignUp">Registro de Usuario</string>
    <string name="street">Av.Principal </string>
    <string name="building">Edificio La Campiña apartamento #43 </string>
    <string name="phone">0212.978.0069</string>
    <string name="title_activity_maps">Map</string>
    <string name="forgotPassword">Olvide mi contraseña</string>
    <string name="send">Enviar</string>
    <string name="newProject">Nuevo Proyecto</string>
    <string name="project_name">Nombre del proyecto</string>
    <string name="project_description">Descripcion del proyecto</string>
</resources>
